--- a/Views/Room/Create.cshtml
+++ b/Views/Room/Create.cshtml
@@ -13,6 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <input asp-for="RoomID" class="form-control" />
+                <span asp-validation-for="RoomID" class="text-danger"></span>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
