--- a/Views/Room/Details.cshtml
+++ b/Views/Room/Details.cshtml
@@ -9,8 +9,8 @@
 <div>
     <h4>Room</h4>
     <hr />
-    <dl class="row">
-    </dl>
+    <p>@Html.DisplayFor(x => Model.RoomID)
+    <dl class="row"></dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.RoomID">Edit</a> |
