--- a/Views/Room/Index.cshtml
+++ b/Views/Room/Index.cshtml
@@ -1,29 +1,30 @@
 @model IEnumerable<Asr.Models.Room>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Room";
 }
 
-<h1>Index</h1>
-
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add New Room</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th></th>
+            <th>@Html.DisplayNameFor(x => x.RoomID)</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>@Html.DisplayFor(x => item.RoomID)</td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.RoomID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.RoomID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.RoomID">Delete</a>
             </td>
         </tr>
+        
+       
 }
     </tbody>
 </table>
