--- a/Views/Room/Edit.cshtml
+++ b/Views/Room/Edit.cshtml
@@ -12,7 +12,11 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="RoomID" />
+            @*@<input type="hidden" asp-for="RoomID" />*@
+            <div class="form-group">
+                <input asp-for="RoomID" class="form-control" />
+                <span asp-validation-for="RoomID" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
