--- a/Views/Slot/Index.cshtml
+++ b/Views/Slot/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of Slot</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Slot</a>
 </p>
 <table class="table">
     <thead>
@@ -15,6 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Room)
             </th>
+            <th> @Html.DisplayNameFor(model => model.StartTime.Date)</th>
             <th>
                 @Html.DisplayNameFor(model => model.Staff)
             </th>
@@ -31,15 +32,22 @@
                 @Html.DisplayFor(modelItem => item.Room.RoomID)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.StartTime.Date)
+            </td>   
+            <td>
                 @Html.DisplayFor(modelItem => item.Staff.StaffID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Student.StudentID)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @*
+        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+                <a asp-action="Edit" asp-route-id="@item.Room.RoomID" asp-route-dateslot="@item.StartTime">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Room.RoomID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Room.RoomID">Delete</a>
             </td>
         </tr>
 }
