--- a/Views/Slot/Create.cshtml
+++ b/Views/Slot/Create.cshtml
@@ -27,7 +27,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="StudentID" class="control-label"></label>
-                <select asp-for="StudentID" class ="form-control" asp-items="ViewBag.StudentID"></select>
+                <input asp-for="StudentID" class="form-control" />
+                <span asp-validation-for="StudentID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
