--- a/Views/Slot/Delete.cshtml
+++ b/Views/Slot/Delete.cshtml
@@ -31,7 +31,7 @@
         </dd class>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="DeleteConfirmed">
         <input type="hidden" asp-for="RoomID" />
         <input type="hidden" asp-for="StartTime" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
