--- a/Views/Slot/Index.cshtml
+++ b/Views/Slot/Index.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayFor(modelItem => item.Room.RoomID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.StartTime.Date)
+                @Html.DisplayFor(modelItem => item.StartTime)
             </td>   
             <td>
                 @Html.DisplayFor(modelItem => item.Staff.StaffID)
@@ -45,9 +45,9 @@
         @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
         @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
-                <a asp-action="Edit" asp-route-id="@item.Room.RoomID" asp-route-dateslot="@item.StartTime">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Room.RoomID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Room.RoomID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Room.RoomID" asp-route-date="@item.StartTime">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Room.RoomID" asp-route-date="@item.StartTime" >Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Room.RoomID" asp-route-date="@item.StartTime">Delete</a>
             </td>
         </tr>
 }
