changed date param to datetime in index file

--- a/Views/Slot/Index.cshtml
+++ b/Views/Slot/Index.cshtml
@@ -45,9 +45,9 @@
         @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
         @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
-                <a asp-action="Edit" asp-route-id="@item.Room.RoomID" asp-route-date="@item.StartTime">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Room.RoomID" asp-route-date="@item.StartTime" >Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Room.RoomID" asp-route-date="@item.StartTime">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime" >Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime">Delete</a>
             </td>
         </tr>
 }
