implement book and cancel slot in student controller also search function

--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -1,45 +1,54 @@
-@model IEnumerable<Asr.Models.Slot>
+@model Asr.Models.SlotStaffViewModel
 
 @{
     ViewData["Title"] = "Available Slots";
 }
 
 <h1>Available Slots</h1>
+<form asp-controller="Student" asp-action="Index" method="get">
+    <div>
+        <p><select asp-for="StaffId" asp-items="Model.StaffId"></select></p>
+        <input type="submit" value="Search" />
+    </div>
+       
+    
+</form>
 
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.RoomID)
+                @Html.DisplayNameFor(model => model.Slots[0].RoomID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartTime)
+                @Html.DisplayNameFor(model => model.Slots[0].StartTime)
             </th>
-            <th> @Html.DisplayNameFor(model => model.StaffID) </th>
-            <th> @Html.DisplayNameFor(model => model.StudentID) </th>
+            <th> @Html.DisplayNameFor(model => model.Slots[0].StaffID) </th>
+            <th> @Html.DisplayNameFor(model => model.Slots[0].StudentID) </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.RoomID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StaffID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StudentID)
-            </td>
-            <td>
-                <a asp-action="BookSlot" asp-route-id="@item.RoomID" asp-route-datetime="@item.StartTime" >Book a slot</a> |
-                <a asp-action="CancelSlot" asp-route-id="@item.RoomID" asp-route-datetime="@item.StartTime">Cancel a Booking</a> |
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Slots)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RoomID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StaffID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StudentID)
+                </td>
+                <td>
+                    <a asp-action="BookSlot" asp-route-id="@item.RoomID" asp-route-datetime="@item.StartTime">Book a slot</a> |
+                    <a asp-action="CancelSlot" asp-route-id="@item.RoomID" asp-route-datetime="@item.StartTime">Cancel a Booking</a> |
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
