--- a/Views/Staff/Delete.cshtml
+++ b/Views/Staff/Delete.cshtml
@@ -1,33 +1,54 @@
-@model Asr.Models.Staff
+@model Asr.Models.Slot
 
 @{
     ViewData["Title"] = "Delete";
 }
 
 <h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+@if (string.IsNullOrEmpty(Model.StudentID))
+{
+    <h3>Are you sure you want to delete this?</h3>
+}
+else
+{
+    <h3>Cannot delete slot as slot is already booked by a student</h3>
+}
 <div>
-    <h4>Staff</h4>
+    <h4>Slot</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Room)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Room.RoomID)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Staff)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Staff.StaffID)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Student)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Student.StudentID)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="StaffID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+
+    @if (string.IsNullOrEmpty(Model.StudentID))
+    {
+        <form asp-action="DeleteConfirmed">
+            <input type="hidden" asp-for="RoomID" />
+            <input type="hidden" asp-for="StartTime" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-action="Index">Back to List</a>
+        </form>
+    }
+    else
+    {
         <a asp-action="Index">Back to List</a>
-    </form>
+    }
+
 </div>
