--- a/Views/Staff/Create.cshtml
+++ b/Views/Staff/Create.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+@* The label tag is the one that shows the label of input box below it. *@
             <div class="form-group">
                 <label asp-for="RoomID" class="control-label"></label>
                 <select asp-for="RoomID" class="form-control" asp-items="ViewBag.RoomID"></select>
@@ -23,7 +24,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="StaffID" class="control-label"></label>
-                <select asp-for="StaffID" class="form-control" asp-items="ViewBag.StaffID"></select>
+                <select asp-for="StaffID" class="form-control" asp-items="ViewBag.StaffID" readonly="readonly"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="StudentID" class="control-label"></label>
+                <select asp-for="StudentID" class="form-control" disabled="@(true)"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
