--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -6,11 +6,9 @@
 
 <h1>Available Slots</h1>
 <form asp-controller="Student" asp-action="Index" method="get">
-    <div>
+    <div class="form-group">
         @Html.DropDownListFor(e => e.StaffId, Model.StaffId as IEnumerable<SelectListItem>)
-        <input asp-for="DateStart" class="form-control" />
-        
-            
+        <input asp-for="DateStart" class="form-control" />      
         <input type="submit" value="Search" />
     </div>
        
