--- a/Views/Staff/Index.cshtml
+++ b/Views/Staff/Index.cshtml
@@ -20,7 +20,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Room)
             </th>
-            <th> @Html.DisplayNameFor(model => model.StartTime.Date)</th>
+            <th> 
+                @Html.DisplayNameFor(model => model.StartTime)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Staff)
             </th>
@@ -47,13 +49,13 @@
                     @Html.DisplayFor(modelItem => item.Student.StudentID)
                 </td>
                 <td>
-                    @*
-                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
-                    <a asp-action="Edit" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime">Delete</a>
+                    <a asp-action="Details" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime">Slot Details</a> |
+
+                    @if (item.Staff.Email == User.Identity.Name)
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.Room.RoomID" asp-route-datetime="@item.StartTime">Remove Slot</a>
+                    }
+
                 </td>
             </tr>
         }
