Moved faq and sitemap to home controller.

--- a/Views/StatusCode/Index.cshtml
+++ b/Views/StatusCode/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model int
+@* Code copied from a tutorial about error handling/redirection WDT. *@
+
+@* https://stackoverflow.com/questions/7996569/can-we-create-custom-http-status-codes *@
+
 @{
     var statusCode = Model;
     var statusmessage = "";
