--- a/Asr/Views/Shared/_Layout.cshtml
+++ b/Asr/Views/Shared/_Layout.cshtml
@@ -20,11 +20,9 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <p>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="img/logo.png" alt="RMIT ASR System logo" height="75" />
-                </a>
-            </p>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <img src="img/logo.png" alt="RMIT ASR System logo" width="150" />
+            </a>
             <div class="container">
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -63,12 +61,40 @@
             </div>
         </nav>
     </header>
+    @{
+        Uri url = new Uri(String.Format("{0}://{1}{2}{3}", Context.Request.Scheme, Context.Request.Host, Context.Request.Path, Context.Request.QueryString));
+
+        if (url.ToString() == "https://localhost:44300/" ||
+            url.ToString().Substring(0,28) == "https://localhost:44300/Home" )
+        {
+            <div class="main-image-container">
+                <div class="container">
+                    <partial name="_CookieConsentPartial" />
+                    <main role="main" class="pb-3">
+                        @RenderBody()
+                    </main>
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="container">
+                <partial name="_CookieConsentPartial" />
+                <main role="main" class="pb-3">
+                    @RenderBody()
+                </main>
+            </div>
+        }
+
+    }
+
     <div class="container">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
