Web app visual changes and functionality. Hid some nav links.

--- a/Asr/Views/Home/Faq.cshtml
+++ b/Asr/Views/Home/Faq.cshtml
@@ -4,3 +4,43 @@
 
 <h1>FAQ</h1>
 
+
+<ol class="own-faq-list">
+    <li>
+        What is an ASR System?
+        <p>
+            ASR is an abbreviation for Appointment, Scheduling and Reservation.
+        </p>
+    </li>
+    <li>
+        Who can use this Web App?
+        <p>
+            RMIT Staff and Student can use this web app to organise consultation times. 
+            Although other users can access this website, they cannot perform the main
+        </p>
+    </li>
+    <li>
+        What are the purposes of this web app?
+        <p>
+            Staff can use this app to allocate room venues (A, B, C, D...) and schedule room availability 
+            at their desired time. <br />
+            Once the slots have been created, Students can see these in a list, and can choose whether to
+            book and meet the schedule staff or cancel their booking.
+        </p>
+    </li>
+    <li>
+        What are the rules to follow with the system?
+        <p>
+            Room Venues: the daily maximum booking of each room venue is 2; one-to-one ratio of Staff and Student. <br />
+            Staff: can only create 4 room slots per day. <br />
+            Student: can only book in 1 room slot per day.
+        </p>
+    </li>
+    <li>
+        "I can't seem to find the function I am looking."
+        <p>
+            This function may not be available at the moment.
+            More features are being tested by the team and will be added to the ASR System after the tests have concluded.
+        </p>
+    </li>
+</ol>
