--- a/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,6 +17,11 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>
+          <li [routerLinkActive]='["link-active"]'>
+            <a [routerLink]='["/fetch-slots"]' (click)='collapse()'>
+              <span class='glyphicon glyphicon-th-list'></span> Fetch Slot
+            </a>
+          </li>
         </ul>
       </div>
     </div>
