--- a/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,6 +17,15 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/fetch-slot"]'>Fetch slot</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/delete-slot"]'>Delete slot</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/add-room"]'>Add room</a>
+          </li>
         </ul>
       </div>
     </div>
