--- a/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,6 +18,9 @@
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/slot"]'>Slots</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/fetch-slot"]'>Fetch slot</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
