--- a/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -11,33 +11,48 @@
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
-            <ul class='nav navbar-nav'>
-                <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                    <a [routerLink]='["/"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/counter"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/add-employee"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-th-list'></span> Add Employee
-                    </a>
-                </li>
-                <li [routerLinkActive]='["link-active"]'>
-                    <a [routerLink]='["/fetch-employee"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch Employee
-                    </a>
-                </li>
-            </ul>
+          <ul class='nav navbar-nav'>
+            <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+              <a [routerLink]='["/"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-home'></span> Home
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/counter"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-education'></span> Counter
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Fetch data
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/add-employee"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Add Employee
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-employee"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Fetch Employee
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/fetch-slot"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Fetch Slot
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/add-room"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Add Room
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/get-slot"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Get Slot
+              </a>
+            </li>
+          </ul>
         </div>
     </div>
 </div>
