now fetch room is working by changed slotList to roomList in room component .html file

--- a/AsrAngular/ClientApp/src/app/Components/fetch-room/fetch-room.component.html
+++ b/AsrAngular/ClientApp/src/app/Components/fetch-room/fetch-room.component.html
@@ -1,8 +1,8 @@
 <h1>{{title}}</h1>
 
-<p *ngIf="!slotList"><em>Loading...</em></p>
+<p *ngIf="!roomList"><em>Loading...</em></p>
 
-<table class='table' *ngIf="slotList">
+<table class='table' *ngIf="roomList">
   <thead>
     <tr>
       <th>Room ID</th>
