cannot get page show up

--- a/AsrAngular/ClientApp/src/app/Components/fetch-room/fetch-room.component.html
+++ b/AsrAngular/ClientApp/src/app/Components/fetch-room/fetch-room.component.html
@@ -2,7 +2,7 @@
 
 <p *ngIf="!roomList"><em>Loading...</em></p>
 <p>
-  <a [routerLink]="['/add-employee']">Add New</a>
+  <a [routerLink]="['/add-room']">Add New</a>
 </p>
 <table class='table' *ngIf="roomList">
   <thead>
