--- a/AsrAngular/ClientApp/src/app/Components/add-room/add-room.component.html
+++ b/AsrAngular/ClientApp/src/app/Components/add-room/add-room.component.html
@@ -1,3 +1,15 @@
-<p>
-  add-room works!
-</p>
+<h1>{{title}}</h1>
+<hr />
+
+<form>
+  <div class="form-group row">
+    <label class=" control-label col-md-12">Room ID</label>
+    <div class="col-md-4"> <input class="form-control" type="text" formControlName="roomId"> </div>
+
+  </div>
+
+  <div class="form-group">
+    <button type="submit" class="btn btn-default">Add room</button>
+    <button class="btn" (click)="cancel()">Cancel</button>
+  </div>
+</form>
