Finally fixed creating new room. Problem lies on the component, had to recreate the whole add-room component

--- a/AsrAngular/ClientApp/src/app/Components/add-room/add-room.component.html
+++ b/AsrAngular/ClientApp/src/app/Components/add-room/add-room.component.html
@@ -1,11 +1,11 @@
 <h1>{{title}}</h1>
+
 <hr />
 
-<form>
+<form [formGroup]="roomForm" (ngSubmit)="save()" #formDir="ngForm">
   <div class="form-group row">
-    <label class=" control-label col-md-12">Room ID</label>
-    <div class="col-md-4"> <input class="form-control" type="text" formControlName="roomId"> </div>
-
+    <label class=" control-label col-md-12">Add Room ID</label>
+    <div class="col-md-4"> <input class="form-control" type="text" formControlName="roomId" id="roomId"> </div>
   </div>
 
   <div class="form-group">
