--- a/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,6 +23,11 @@
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
+              <a [routerLink]='["/edit-student"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-th-list'></span> Edit Student
+              </a>
+            </li>
+            <li [routerLinkActive]='["link-active"]'>
               <a [routerLink]='["/fetch-room"]' (click)='collapse()'>
                 <span class='glyphicon glyphicon-th-list'></span> Fetch Room
               </a>
