--- a/AsrAngular/ClientApp/src/app/Components/fetch-slot/fetch-slot.component.html
+++ b/AsrAngular/ClientApp/src/app/Components/fetch-slot/fetch-slot.component.html
@@ -12,6 +12,8 @@
       <th>Start Time</th>
       <th>Staff ID</th>
       <th>Student ID</th>
+      <th>Booking</th>
+      <th>Delete</th>
     </tr>
   </thead>
   <tbody>
