--- a/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AsrAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -19,12 +19,7 @@
             </li>
             <li [routerLinkActive]='["link-active"]'>
               <a [routerLink]='["/fetch-slot"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-th-list'></span> Fetch Slot
-              </a>
-            </li>
-            <li [routerLinkActive]='["link-active"]'>
-              <a [routerLink]='["/edit-student"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-th-list'></span> Edit Student
+                <span class='glyphicon glyphicon-th-list'></span> Slot Manipulation
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
