--- a/AsrAngular/ClientApp/src/app/Components/edit-student/edit-student.component.html
+++ b/AsrAngular/ClientApp/src/app/Components/edit-student/edit-student.component.html
@@ -4,16 +4,16 @@
 <form [formGroup]="slotForm" (ngSubmit)="save()" #formDir="ngForm">
   <div class="form-group row">
     <label class=" control-label col-md-12">Room ID</label>
-    <input class="form-control" type="text" value="{{roomId}}" formControlName="roomId" readonly="readonly"/>
+    <input class="form-control" type="text"  formControlName="roomId" readonly="readonly"/>
   </div>
   <div class="form-group row">
     <label class=" control-label col-md-12">Start Date and Time</label>
-    <input class="form-control" type="text" value="{{startTime}}" formControlName="startTime" readonly="readonly" />
+    <input class="form-control" type="text"  formControlName="startTime" readonly="readonly" />
 
   </div>
   <div class="form-group row">
     <label class=" control-label col-md-12">Staff ID</label>
-    <input class="form-control" type="text" value="{{staffId}}" formControlName="staffId" readonly="readonly" />
+    <input class="form-control" type="text"  formControlName="staffId" readonly="readonly" />
 
   </div>
   <div class="form-group row">
@@ -24,7 +24,7 @@
 
   <div class="form-group">
     <button type="submit" class="btn btn-default">Save</button>
-    <button class="btn" (click)="cancel()">Cancel</button>
+    <button class="btn" (click)="cancel()">Go to Slot List</button>
   </div>
 
 </form>
