--- a/Asr/Views/Shared/_Layout.cshtml
+++ b/Asr/Views/Shared/_Layout.cshtml
@@ -51,12 +51,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Faq">FAQ</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sitemap">Site Map</a>
-                        </li>
+
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            @if(User.Identity.Name.StartsWith('e')){
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sitemap">Site Map</a>
+                            </li>
+                            @if (User.Identity.Name.StartsWith('e'))
+                            {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Staff" asp-action="Index">Staff</a>
                                 </li>
