--- a/Asr/Views/Staff/Create.cshtml
+++ b/Asr/Views/Staff/Create.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="StudentID" class="control-label"></label>
-                <select asp-for="StudentID" class="form-control" disabled="@(true)"></select>
+                <select asp-for="StudentID" class="form-control" disabled="@true"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
