--- a/Asr/Views/Staff/Index.cshtml
+++ b/Asr/Views/Staff/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Created Slots</h1>
+<h1>Slot List</h1>
 
 <div >
     <a asp-action="Create">Create New Slot</a>
