--- a/Asr/Views/Staff/Delete.cshtml
+++ b/Asr/Views/Staff/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Slot</h1>
 @if (string.IsNullOrEmpty(Model.StudentID))
 {
     <h3>Are you sure you want to delete this?</h3>
