--- a/Asr/Views/Student/CancelSlot.cshtml
+++ b/Asr/Views/Student/CancelSlot.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "CancelSlot";
 }
 
-<h1>Booking</h1>
+<h1>Cancel Booking</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
